# burning-floor

./: .gitignore  CMakeLists.txt
asset/: config.txt
asset/data/: data_asset.txt
cmake/: vendor_box2d.cmake  vendor_cglm.cmake  vendor_glm.cmake  vendor_sdl.cmake
src/: assert.cpp  common.cpp  common.h  context.cpp  enemy.cpp  global.h  log.cpp  log.h  macro.h  main.c  main.cpp  player.cpp  sprite.cpp  system.cpp  test_spines.txt  texture.cpp
src/alloc/: arena.h
src/allocator/: allocator.h
src/ani/: ani.c  ani.h
src/enemy/: enemy.c  enemy.h  slime.c
src/entity/: entity.c  entity.h
src/ett/: ett.c  ett.h
src/game/: enemy.c  enemy.h  level.c  level.h  player.c  player.h
src/image/: image.c  image.h
src/img/: img.c  img.h
src/input/: define.cpp  define.h  input.c  input.cpp  input.h
src/player/: player.c  player.h
src/pool/: pool.c  pool.h
src/random/: random.h
src/spines/: spines.c  spines.cpp  spines.cppm  spines.h
src/sprite/: sprite.c  sprite.h
src/strat/: allocator.cpp  arena.cpp  assert.cpp  dyn_array.cpp  hash_map.cpp  pool.cpp
src/time/: time.c  time.h  timel.c  timel.h
src/vfx/: vfx.h
